<resources>
    <string name="app_name">출그니</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="hide">▲</string>
    <string name="show">▼</string>
    <string name="emo1">🏢</string>
    <string name="emo2">🕖</string>
    <string name="emo3">👤</string>
    <string name="emo_photo">🌄 갤러리</string>
    <string name="emo_take_photo">📷 카메라</string>
    <string name="emo_tag">🏷️ 태그</string>
    <string-array name="select_sort">
        <item>시간순</item>
        <item>비용순</item>
    </string-array>
</resources>